# assertlib

./: .hgignore  CMakeLists.txt  Readme.md  main.cpp  pow2assert.cpp  pow2assert.h
Generator/: generate.py  template_assert.cpp  template_assert.h
